--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4",
@@ -26,9 +27,13 @@
   ],
   "standard": {
     "parser": "babel-eslint",
-    "globals": [ "requestAnimationFrame", "cancelAnimationFrame" ]
+    "globals": [
+      "requestAnimationFrame",
+      "cancelAnimationFrame"
+    ]
   },
   "devDependencies": {
+    "babel-eslint": "^9.0.0",
     "standard": "^12.0.1"
   }
 }
